cabal-version: 2.2
name:          plutus-cbor
version:       1.0.1
synopsis:      On-chain CBOR encoders/decoders
author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/hydra

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-strictness -fprint-potential-instances

library
  import:          project-config
  hs-source-dirs:  src
  ghc-options:     -haddock
  build-depends:
    , plutus-tx
    , plutus-tx-plugin

  exposed-modules: Plutus.Codec.CBOR.Encoding

test-suite tests
  import:             project-config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , cborg
    , hspec
    , hydra-prelude
    , hydra-test-utils   >=0.10.0
    , plutus-cbor
    , plutus-tx
    , QuickCheck

  other-modules:
    Plutus.Codec.CBOR.EncodingSpec
    Spec

benchmark bench
  import:             project-config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , bytestring
    , criterion
    , hydra-prelude
    , plutus-cbor
    , plutus-ledger-api  >=1.1.0.0
    , plutus-tx
    , QuickCheck
    , serialise

executable encoding-cost
  import:         project-config
  hs-source-dirs: exe/encoding-cost
  main-is:        Main.hs
  other-modules:  Plutus.Codec.CBOR.Encoding.Validator
  build-depends:
    , base
    , binary
    , bytestring
    , hydra-plutus-extras
    , hydra-prelude
    , hydra-test-utils     >=0.10.0
    , plutus-cbor
    , plutus-ledger-api    >=1.1.0.0
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , scientific

  ghc-options:    -threaded -rtsopts
