cabal-version: 2.2
name:          plutus-merkle-tree
version:       1.1.0
synopsis:      On-Chain Merkle Trees
author:        IOHK
copyright:     2022 IOHK
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/hydra

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wnoncanonical-monad-instances -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness

library
  import:          project-config
  ghc-options:     -haddock
  exposed-modules: Plutus.MerkleTree
  hs-source-dirs:  src
  build-depends:
    , base
    , base16-bytestring
    , plutus-core
    , plutus-tx
    , text

test-suite tests
  import:             project-config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , base
    , bytestring
    , hspec
    , hydra-prelude
    , hydra-test-utils
    , plutus-merkle-tree
    , plutus-tx
    , QuickCheck

  other-modules:
    Plutus.MerkleTreeSpec
    Spec

  main-is:            Main.hs

benchmark on-chain-cost
  import:         project-config
  hs-source-dirs: bench
  main-is:        Main.hs
  other-modules:  Validators
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts
  build-depends:
    , base
    , bytestring
    , directory
    , filepath
    , hydra-plutus-extras
    , hydra-prelude
    , hydra-test-utils     >=0.10.0
    , plutus-ledger-api    >=1.1.0.0
    , plutus-merkle-tree
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
